force-app/main/default/objects/Fin_MMFSL__c/Fin_MMFSL__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>for MMFSL Callout end points</description>
    <label>Fin MMFSL</label>
</CustomObject>