force-app/main/default/objects/Fin_MMFSL__c/fields/bulk_clientId__c.field-meta.xml
<CustomField>
    <fullName>bulk_clientId__c</fullName>
    <label>bulk clientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>