force-app/main/default/objects/Fin_MMFSL__c/fields/bulk_endpoint__c.field-meta.xml
<CustomField>
    <fullName>bulk_endpoint__c</fullName>
    <label>bulk endpoint</label>
    <type>Url</type>
</CustomField>