force-app/main/default/objects/Fin_MMFSL__c/fields/subscriber_code__c.field-meta.xml
<CustomField>
    <fullName>subscriber_code__c</fullName>
    <label>subscriber code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>